# testra

./: ENGINEERING_VALIDATION_REPORT.md  PRODUCTION_PLAYBOOK.md  SECURITY_HARDENING_REPORT.md  testra-brd.md  testra-master-context.md  testra-product-architecture-strategy.md  testra-product-discovery.md  testra-product-strategy.md
04_Architecture/: testra-software-architecture-decisions.md
testra/: .env.example  .gitignore  ENGINEERING_DEBT_REGISTER.md  ENGINEERING_RELEASE_REPORT_v2.md  EXECUTIVE_ENGINEERING_REPORT.md  Makefile  README.md  SPRINT_REPORT.md  go.work  package.json  pnpm-lock.yaml  turbo.json
testra/.github/workflows/: ci.yml
testra/apps/api/: .air.toml  .env.example  README.md  deps.csv  go.mod  go.sum  package.json
testra/apps/ml/: README.md  package.json  pyproject.toml
testra/apps/ml/api/: main.py
testra/apps/ml/testra_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
testra/apps/ml/tests/: test_main.py
testra/apps/web/: README.md  middleware.ts  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
testra/apps/worker/: README.md  go.mod  package.json
testra/docs/: AI_CONTEXT.md  AI_MEMORY.md  AI_RULES.md  BIBLICAL_TESTRA.md  FEATURE_MATRIX.md  PROJECT_OVERVIEW.md  README.md  ROUTES.md
testra/docs/api/: API_DESIGN_GUIDELINES.md  API_VERSIONING_GUIDE.md
testra/docs/architecture/: ERD.md  (+6 more)
testra/scripts/: check-openapi-drift.mjs  doc_audit_check.json  doc_audit_check.py  doc_audit_check_ai.json  doc_audit_check_final.json  doc_audit_check_latest.json  doc_audit_check_latest2.json  prod-smoke-test.sh  sync-openapi.mjs
(+486 files in other folders)
